Fixed driver config options

--- a/mssql.html
+++ b/mssql.html
@@ -44,12 +44,12 @@
         <input type="text" id="node-config-input-database">
     </div>
     <div class="form-row">
-        <label for="node-config-input-requestTimeout"><i class="icon-bookmark"></i> requestTimeout</label>
-        <input type="text" id="node-config-input-requestTimeout" placeholder="requestTimeout">
+        <label for="node-config-input-connectionTimeout"><i class="icon-bookmark"></i>Connection Timeout</label>
+        <input type="text" id="node-config-input-connectionTimeout" placeholder="Connection Timeout">
     </div>
     <div class="form-row">
-        <label for="node-config-input-connectionTimeout"><i class="icon-bookmark"></i> connectionTimeout</label>
-        <input type="text" id="node-config-input-connectionTimeout" placeholder="connectionTimeout">
+        <label for="node-config-input-requestTimeout"><i class="icon-bookmark"></i>Request Timeout</label>
+        <input type="text" id="node-config-input-requestTimeout" placeholder="Request Timeout">
     </div>
     <div class="form-row">
         <label for="node-config-input-pool"><i class="icon-bookmark"></i> Max Pool Size</label>
@@ -57,7 +57,7 @@
     </div>
     <div class="form-row">
         <label for="node-config-input-poolTimeout"><i class="icon-bookmark"></i>Idle Timeout in Millis</label>
-        <input type="text" id="node-config-input-poolTimeout" placeholder="Connect Timeout">
+        <input type="text" id="node-config-input-poolTimeout" placeholder="Connect Pool Timeout">
     </div>
     <div class="form-row">
         <label for="node-config-input-encyption"><i class="fa fa-user"></i> Use Encryption?</label>
